; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_style.c_run_test.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_style.c_run_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IID_IPropertyNotifySink = common dso_local global i32 0, align 4
@PropertyNotifySink = common dso_local global i32 0, align 4
@doc_complete = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"ref = %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32 (i32*)*)* @run_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_test(i8* %0, i32 (i32*)* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32 (i32*)*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 (i32*)* %1, i32 (i32*)** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32* @create_doc_with_string(i8* %8)
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  br label %46

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @do_advise(i32* %14, i32* @IID_IPropertyNotifySink, i32* @PropertyNotifySink)
  br label %16

16:                                               ; preds = %24, %13
  %17 = load i32, i32* @doc_complete, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %22, label %19

19:                                               ; preds = %16
  %20 = call i64 @GetMessageW(i32* %7, i32* null, i32 0, i32 0)
  %21 = icmp ne i64 %20, 0
  br label %22

22:                                               ; preds = %19, %16
  %23 = phi i1 [ false, %16 ], [ %21, %19 ]
  br i1 %23, label %24, label %27

24:                                               ; preds = %22
  %25 = call i32 @TranslateMessage(i32* %7)
  %26 = call i32 @DispatchMessageW(i32* %7)
  br label %16

27:                                               ; preds = %22
  %28 = load i32 (i32*)*, i32 (i32*)** %4, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 %28(i32* %29)
  %31 = load i32*, i32** %5, align 8
  %32 = call i32 @IHTMLDocument2_Release(i32* %31)
  store i32 %32, i32* %6, align 4
  %33 = load i32, i32* %6, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %27
  %36 = load i32, i32* %6, align 4
  %37 = icmp eq i32 %36, 1
  %38 = zext i1 %37 to i32
  %39 = call i64 @broken(i32 %38)
  %40 = icmp ne i64 %39, 0
  br label %41

41:                                               ; preds = %35, %27
  %42 = phi i1 [ true, %27 ], [ %40, %35 ]
  %43 = zext i1 %42 to i32
  %44 = load i32, i32* %6, align 4
  %45 = call i32 @ok(i32 %43, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %44)
  br label %46

46:                                               ; preds = %41, %12
  ret void
}

declare dso_local i32* @create_doc_with_string(i8*) #1

declare dso_local i32 @do_advise(i32*, i32*, i32*) #1

declare dso_local i64 @GetMessageW(i32*, i32*, i32, i32) #1

declare dso_local i32 @TranslateMessage(i32*) #1

declare dso_local i32 @DispatchMessageW(i32*) #1

declare dso_local i32 @IHTMLDocument2_Release(i32*) #1

declare dso_local i32 @ok(i32, i8*, i32) #1

declare dso_local i64 @broken(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
